artiq/test/lit/inferencer/error_str_iter.py
# RUN: %python -m artiq.compiler.testbench.inferencer +diag %s >%t
# RUN: OutputCheck %s --file-to-check=%t

# CHECK-L: ${LINE:+1}: error: type str is not iterable
("a")[0]
